--- a/src/pages/Cardapio/Ordenador/Ordenador.module.scss
+++ b/src/pages/Cardapio/Ordenador/Ordenador.module.scss
@@ -14,6 +14,7 @@
   min-width: 240px;
   padding: 0 40px;
   position: relative;
+  cursor: pointer;
   &--ativo {
     background-color: $blue;
     color: white;
